change github button with my own button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <link href="rainbow-flag.png" rel="shortcut icon" type="image/x-icon" />
     <link href="rainbow-flag.png" rel="apple-touch-icon" />
 
-    <!-- github buttons -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="./scss/main.scss" />
     <script defer src="script.js"></script>
   </head>
@@ -32,11 +34,12 @@
       </a>
     </div>
     <a
-      class="github-button"
-      href="https://github.com/itsalinazarpour/infinite"
-      data-color-scheme="no-preference: light; light: light; dark: dark;"
-      aria-label="Star itsalinazarpour/tehran-mapty on GitHub"
-      >GitHub</a
+      href="https://github.com/itsalinazarpour/infinite-scroll"
+      class="btn-github"
+      target="_blank"
+      rel="noopener noreferrer"
     >
+      <button type="button"><i class="fa fa-github"></i> GitHub</button>
+    </a>
   </body>
 </html>
