clean up the code and write some comments, change create murkup structure

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <a
       href="https://github.com/itsalinazarpour/infinite-scroll"
-      class="btn-github"
+      class="link-github"
       target="_blank"
       rel="noopener noreferrer"
     >
