change quote completely and add an animated title

--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
   </head>
   <body>
     <div class="quote">
-      <a
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://www.google.com/search?q=homosexuality+and+science&oq=homosexuality+and+science&aqs=chrome..69i57j46i39.504j0j9&sourceid=chrome&ie=UTF-8"
-      >
-        It's ok to show all your colors &nbsp;
-        <img src="rainbow-flag.png" alt="" />
-      </a>
+      <p>
+        This is in memory of the beautiful couple I saw in the subway. The
+        scrolling is endless! To see the color code of a line, hover or click on
+        it.
+      </p>
     </div>
     <a
       href="https://github.com/itsalinazarpour/infinite-scroll"
@@ -41,5 +38,7 @@
     >
       <button type="button"><i class="fa fa-github"></i> GitHub</button>
     </a>
+
+    <h1><span>IT'S OK TO SHOW</span><span>ALL YOUR COLORS!</span></h1>
   </body>
 </html>
