change quote text and z-index, change tilte animation

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="quote">
       <p>
         This is in memory of the beautiful couple I saw in the subway. The
-        scrolling is endless! To see the color code of a line, hover or click on
-        it.
+        scrolling is endless and reloading the page generates random colors! To
+        see the color code of a line, hover or click on it.
       </p>
     </div>
     <a
