change qoute text

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
   <body>
     <div class="quote">
       <p>
-        This is in memory of the beautiful couple I saw in the subway. The
-        scrolling is endless and reloading the page generates random colors! To
-        see the color code of a line, hover or click on it.
+        This is in memory of the beautiful couple I saw in the subway
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        The scrolling is endless and reloading the page generates random colors
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        To see the color code of a line, hover or click on it
       </p>
     </div>
     <a
